--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo.png",
+      "src": "logo512.png",
       "type": "image/png",
-      "sizes": "64x64"
+      "sizes": "512x512"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     }
   ],
   "start_url": ".",
